--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
     "node": "^17.7.2",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "shortid": "^2.2.16",
+    "valid-url": "^1.0.9"
   }
 }
