--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "mongoose": "^6.3.2",
     "node": "^17.7.2",
     "nodemon": "^2.0.16",
+    "redis": "^3.1.2",
     "shortid": "^2.2.16",
+    "util": "^0.12.4",
     "valid-url": "^1.0.9"
   }
 }
